-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
7653
In case of memory pressure a not locked mutex can be unlocked in function ll_file_open(). This is not allowed and subsequent behavior is not defined.
/***
- mutex_unlock - release the mutex
- @lock: the mutex to be released
- Unlock a mutex that has been locked by this task previously.
- This function must not be used in interrupt context. Unlocking
- of a not locked mutex is not allowed.
- This function is similar to (but not equivalent to) up().
*/